# CameraAPI

./: README.md
CameraApi/: CMakeLists.txt
CameraApi/configure/: CameraApiModuleConfig.h.in  VSEnv.vcxproj.user.in  project_config.h.in
CameraApi/configure/cmake/: FindGTest.cmake  FindOpenCv.cmake  FindTiLib.cmake  ProjectMacros.cmake  TestoLibFunctions.cmake  TestoLibMacros.cmake  TiLibConfig.cmake
CameraApi/configure/configurations/: thirdparty.cfg
CameraApi/doc/: Camera Application Interface Specification.docx
CameraApi/labview_cwrapper/: CMakeLists.txt  c_connector.cpp  c_connector.h
CameraApi/test/: CMakeLists.txt  CameraApiTest.cpp  LabviewWrapperTest.cpp
